overflow issue

--- a/public/css/horizontalScroll.css
+++ b/public/css/horizontalScroll.css
@@ -2,7 +2,7 @@
 /*width:500px;
 height:330px;
 margin:100px auto;*/
-    height:330px;
+    /*height:330px;*/
 background: #333; 
 border:2px solid #000;
 overflow:auto;
